Fix alignment of action bar in RTL languages.

--- a/wiki/src/local.rtl.css
+++ b/wiki/src/local.rtl.css
@@ -35,6 +35,24 @@ html[dir="rtl"] #tor_check {
     margin-right: 2em;
 }
 
+html[dir="rtl"] #crumbs {
+    padding-right: 0;
+}
+
+html[dir="rtl"] .pageheader .actions {
+    right: auto;
+    left: 0;
+    padding-right: 0;
+    padding-left: 25px;
+    background-position: left center;
+}
+
+html[dir="rtl"] .pageheader .actions:hover ul {
+    float: left;
+    text-align: left;
+}
+
+
 @media all and (min-width: 600px) {
     html[dir="rtl"] #tor_check {
         right: auto;
